# claude-proxy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: rebuild-icons.mjs  sync-version.cjs  updater-manifest.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  i18n.rs  lib.rs  main.rs  panel_chrome.rs  platform.rs  state.rs  tray.rs  usage_db.rs
src-tauri/src/proxy/: bridge.rs  error.rs  handler.rs  logging.rs  mod.rs  server.rs  stream.rs
src-tauri/src/proxy/backends/: auth.rs  claude.rs  litellm.rs  mod.rs
src/components/: AppUpdatesSection.tsx  ClaudeCodePanel.tsx  HubUsage.tsx  ModelBrowser.tsx  ProviderSwitch.tsx  ProxyActivityStrip.tsx  SettingsForm.tsx  TrayPopover.tsx  UsageDashboard.tsx
src/components/ui/: Button.tsx  Input.tsx  SegmentedControl.tsx
src/lib/: hubActivity.ts  hubDisplayName.ts  i18n.ts  store.ts  tauri.ts  updater.ts  usageStyles.ts
src/styles/: global.css
