[package]
name = "claude-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "cc_proxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-proxy"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
